# django-bookclub

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
bookclub/: asgi.py  settings.py  urls.py  wsgi.py
bookclub/settings/: base.py  dev.py  prod.py
clubs/: admin.py  models.py  tests.py  urls.py  views.py
clubs/management/commands/: seed.py
clubs/migrations/: 0001_initial.py
clubs/tests/: conftest.py  test_api.py  test_models.py  test_views.py
templates/: base.html
templates/clubs/: book_detail.html  index.html  member_profile.html  review_list.html
