[project]
name = "bookclub"
version = "0.1.0"
description = ""
authors = [
    {name = "v.efremov",email = "v.efremov@cian.ru"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (==6.0.5)",
    "psycopg2-binary (==2.9.12)",
    "django-debug-toolbar (==6.3.0)",
    "pytest-django (==4.12.0)",
    "faker (==40.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
